@@ -19,8 +19,10 @@ apport (0.142) UNRELEASED; urgency=low
   * apport/report.py: Slight robustification of test_add_gdb_info_script()
     test case.
   * debian/local/ubuntu-bug: Fix invocation with "--help". (LP: #305841)
+  * apport/ui.py, load_report(): Clearer error message if report file does not
+    exist. (LP: #204198)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 05 Mar 2009 10:26:56 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 05 Mar 2009 10:33:25 +0100
 
 apport (0.141) jaunty; urgency=low
 
